--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
     <div class="glass-container">
         <h1 class="text-center mb-4">Notes</h1>
         <h2 class="text-center mb-3">Add Note</h2>
-        <form action="/add" method="post">
+        <form action="/add2" method="post">
             <div class="mb-3">
                 <input type="text" class="form-control" placeholder="Title" name="title">
             </div>
